<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#E3F2FD"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyes"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"></TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ears"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/ear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"></TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nose"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/nose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mouth"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/mouth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"></TextView>

            </LinearLayout>

            <TableRow
                android:id="@+id/hr1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444">

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smiling_probability"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/smiling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyes_open"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/lopen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/ropen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/purple_200"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>